--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -41,7 +41,7 @@ override-redirect = true
 [bar/single]
 inherit = global-bar
 
-modules-left = xworkspaces music-prev music-playpause music-next  music 
+modules-left = xworkspaces tasks 
 modules-right =  wireless battery-script pulseaudio cpu temperature memory weather date
 ;modules-center = music
 
@@ -50,7 +50,7 @@ date-format = " %l:%M %p   %m/%d/%Y"
 date-right-padding = 0px
 
 ; Bar specific music output setting
-music_exec = $HOME/.config/polybar/music 0
+music_exec = $HOME/.config/polybar/scripts/music 0
 
 [bar/double-left]
 inherit = global-bar
@@ -277,6 +277,11 @@ label = " %temperature-c%"
 format-padding = 1px
 format-underline = ${util-colors.accent}
 
+[module/tasks]
+type = custom/script
+interval = 5
+label = %output%
+exec = $HOME/.config/polybar/scripts/task-grep
 
 [module/music]
 type = custom/script
@@ -299,8 +304,8 @@ label = %output%
 format-label-font = 6
 format-label-foreground = ${util-colors.foreground}
 
-exec = $HOME/.config/polybar/music_ctl.sh player prev
-click-left = exec $HOME/.config/polybar/music_ctl.sh player prev 1 2> $HOME/.config/polybar/scriptlog.txt
+exec = $HOME/.config/polybar/scripts/music_ctl.sh player prev
+click-left = exec $HOME/.config/polybar/scripts/music_ctl.sh player prev 1
 
 [module/music-playpause]
 type = custom/script
@@ -313,8 +318,8 @@ label = %output%
 format-label-font = 4
 format-label-foreground = ${util-colors.foreground}
 
-exec = $HOME/.config/polybar/music_ctl.sh player playpause  2> $HOME/.config/polybar/scriptlog.txt
-click-left = exec $HOME/.config/polybar/music_ctl.sh player playpause 1 2> $HOME/.config/polybar/scriptlog.txt
+exec = $HOME/.config/polybar/scripts/music_ctl.sh player playpause
+click-left = exec $HOME/.config/polybar/scripts/music_ctl.sh player playpause 1
 
 [module/music-next]
 type = custom/script
@@ -324,8 +329,8 @@ label = %output%
 format-label-font = 6
 format-label-foreground = ${util-colors.foreground}
 
-exec = $HOME/.config/polybar/music_ctl.sh player next 2> $HOME/.config/polybar/scriptlog.txt
-click-left = exec $HOME/.config/polybar/music_ctl.sh player next 1 2> $HOME/.config/polybar/scriptlog.txt
+exec = $HOME/.config/polybar/scripts/music_ctl.sh player next
+click-left = exec $HOME/.config/polybar/scripts/music_ctl.sh player next 1
 
 [module/weather]
 type = custom/script
@@ -338,7 +343,7 @@ label = %output%
 format-label-font = 4
 format-underline = ${util-colors.accent}
 
-exec = $HOME/.config/polybar/weather
+exec = $HOME/.config/polybar/scripts/weather
 
 
 [module/battery-script]
@@ -348,8 +353,8 @@ type = custom/script
 label = %output%
 format-label-font = 6
 
-exec = $HOME/.config/polybar/battery.py 2> $HOME/.config/polybar/scriptlog.txt
-click-left = exec $HOME/.config/polybar/statuses.py toggle_status battery 2> $HOME/.config/polybar/scriptlog.txt
+exec = $HOME/.config/polybar/scripts/battery.py
+click-left = exec $HOME/.config/polybar/scripts/statuses.py toggle_status battery
 
 ; Seconds
 interval = 1
