--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -42,7 +42,7 @@ override-redirect = true
 inherit = global-bar
 
 modules-left = xworkspaces tasks 
-modules-right =  wireless battery-script pulseaudio cpu temperature memory weather date
+modules-right =  wireless battery-script pulseaudio cpu temperature memory date
 ;modules-center = music
 
 ; Bar specific date module format
