--- a/.config/uudev.conf
+++ b/.config/uudev.conf
@@ -1,7 +1,7 @@
 *!?
 export DISPLAY=:0
 * ACTION=="add", ID_BUS=="usb", SUBSYSTEM=="net", ID_MODEL_ID=="4010", ID_REVISION=="0504"
-/home/schelcc/bin/remarkable-sync.sh &
+files_changed=$(/home/schelcc/bin/rm-sync -i|wc -l); notify-send "Remarkable Sync" "${files_changed} Files changed/added"; /home/schelcc/bin/embedded-note-creator.sh
 * ACTION=="add", ID_BUS=="usb", SUBSYSTEM=="usb", ID_MODEL_ID=="2817", ID_REVISION=="0764"
 /home/schelcc/bin/ws_dock.sh &
 * ACTION=="remove", DEVTYPE=="usb_interface", ID_VENDOR_FROM_DATABASE=="Magic Control Technology Corp."
