--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,6 +25,9 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86MonBrightnessUp exec increase_brightness
 bindsym XF86MonBrightnessDown exec decrease_brightness
 
+bindsym XF86Launch9 exec increase_brightness
+bindsym XF86Launch8 exec decrease_brightness
+
 # Toggle light and dark mode
 bindsym $mod+Shift+t exec "light_dark.py"
 
@@ -48,10 +51,10 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec rofi -config ~/.config/rofi/config.rasi -no-lazy-grab -scroll-method 1 -show run
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -60,10 +63,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
