--- a/.config/i3/config
+++ b/.config/i3/config
@@ -75,10 +75,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym Ctrl+h split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+bindsym Ctrl+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
