--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,7 +1,6 @@
 set $mod Mod1
 
-font pango:monospace 8
-
+font pango:monospace 8 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
@@ -75,10 +74,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym Ctrl+h split h
+bindsym $mod+g split h
 
 # split in vertical orientation
-bindsym Ctrl+v split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
