--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -145,6 +145,8 @@ animation-packetloss-framerate = 500
 [module/xworkspaces]
 type = internal/xworkspaces
 
+format-font = 1
+
 ; Active workspace settings
 label-active = %name%
 label-active-background = ${util-colors.alt-background}
