added music, removed music bc it sucks

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -41,8 +41,8 @@ override-redirect = true
 [bar/single]
 inherit = global-bar
 
-modules-left = xworkspaces tasks 
-modules-right =  wireless battery-script pulseaudio cpu temperature memory date
+modules-left = xworkspaces 
+modules-right =  wireless battery-script pulseaudio date
 ;modules-center = music
 
 ; Bar specific date module format
