--- a/.config/i3/config
+++ b/.config/i3/config
@@ -27,6 +27,9 @@ bindsym XF86MonBrightnessDown exec decrease_brightness
 bindsym XF86Launch9 exec increase_brightness
 bindsym XF86Launch8 exec decrease_brightness
 
+# Screenshot
+bindsym $mod+Shift+s exec "export $DISPLAY=:0 && screenshot.sh"
+
 # Toggle light and dark mode
 bindsym $mod+Shift+t exec "light_dark.py"
 
