a lot of changes

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -6,18 +6,19 @@ screenchange-reload = false
 
 [global-bar]
 width = 100%
-height = 34pt
+height = 34px
 
 background = ${util-colors.background}
 foreground = ${util-colors.foreground}
 
 ; Underline/overline line weight
-line-size = 4pt
+line-size = 2.5pt
 
 ; Required for any polybar-msg functionality
 enable-ipc = true
 
-module-margin = 1px
+module-margin = 10px
+padding-right = 5px
 
 ; modules default to font-0
 ; font references are 1-indexed
@@ -31,8 +32,6 @@ cursor-click = pointer
 
 bottom = true
 
-tray-position=right
-
 ; Required for i3 compatability
 wm-restack = i3
 override-redirect = true
@@ -42,7 +41,7 @@ override-redirect = true
 inherit = global-bar
 
 modules-left = xworkspaces 
-modules-right =  wireless battery-script pulseaudio date
+modules-right =  wireless battery-script pulseaudio weather date passthrough tray 
 ;modules-center = music
 
 ; Bar specific date module format
@@ -51,6 +50,8 @@ date-right-padding = 0px
 
 ; Bar specific music output setting
 music_exec = $HOME/.config/polybar/scripts/music 0
+
+;monitor = ${env:PRIMARY_MONITOR} 
 
 [bar/double-left]
 inherit = global-bar
@@ -83,16 +84,44 @@ date-right-padding = 0px
 
 tray-position = right
 
+[module/testing]
+type = custom/ipc
+
+hook-0 = echo "foo"
+hook-1 = echo "bar"
+hook-2 = echo "foobar"
+
+[module/passthrough]
+type = custom/ipc
+
+label = %output%
+format-0 = <label>
+format-1-underline = ${util-colors.accent}
+format-1-padding = 1
+format-1 = 󰠜<label>
+
+hook-0 = echo ""
+hook-1 = echo ""
+
+initial = 1
+
+[module/tray]
+type = internal/tray
+
+tray-size = 50%
+tray-padding = 5px
+
+
 [module/empty-pad]
 type = custom/text
 content = " "
 content-background = ${util-colors.background}
-content-foreground = ${util-colors.foreground}
+content-foreground = ${util-colors.background}
 
 
 [module/wireless]
 type = internal/network
-
+;f
 interval = 2.5
 
 interface = wlp0s20f3
@@ -164,7 +193,7 @@ label-urgent-padding = 1
 
 ; Fixes empty padding between workspaces that cross monitors
 label-empty = %name%
-label-empty-foreground = ${util-colors.alt-bg}
+label-empty-foreground = ${util-colors.alt-background}
 label-empty-padding = 1
 
 ; Show only workspaces on same display as bar
@@ -246,16 +275,12 @@ format-warn-underline = ${util-colors.alert}
 [module/date]
 type = internal/date
 
-; Seconds
-interval = 1
-
 ; Clock symbol    Calendar symbol
 date = ${root.date-format}
 
 label = %date%
 label-foreground = ${util-colors.foreground}
 
-format-padding = 1px
 format-underline = ${util-colors.accent}
 module-margin-right = ${root.date-right-padding}
 
@@ -312,8 +337,9 @@ click-left = exec $HOME/.config/polybar/scripts/music_ctl.sh player prev 1
 [module/music-playpause]
 type = custom/script
 
-; Seconds
-interval = 0.1
+hook-0 =""
+hook-1 = "" 
+hook-2 = ""
 
 ; Display script stdout
 label = %output%
@@ -338,7 +364,7 @@ click-left = exec $HOME/.config/polybar/scripts/music_ctl.sh player next 1
 type = custom/script
 
 ; Seconds
-interval = 30
+interval = 60
 
 ; Display script stdout
 label = %output%
