--- a/.config/uudev.conf
+++ b/.config/uudev.conf
@@ -1,8 +1,10 @@
 *!?
 export DISPLAY=:0
-* ACTION=="add", ID_BUS=="usb", SUBSYSTEM=="net", ID_MODEL_ID=="4010", ID_REVISION=="0504"
-files_changed=$(/home/schelcc/bin/rm-sync -i|wc -l); notify-send "Remarkable Sync" "${files_changed} Files changed/added"; /home/schelcc/bin/embedded-note-creator.sh
-* ACTION=="add", SUBSYSTEM=="input", ID_MODEL_ID=="00db", ID_VENDOR_ID=="045e", MAJOR="13"
+* ACTION=="add", SUBSYSTEM=="usb", ID_MODEL_ID=="161f", ID_VENDOR_ID=="0c76"
 /home/schelcc/bin/ws_dock.sh &
-* ACTION=="remove", DEVTYPE=="usb_interface", ID_VENDOR_FROM_DATABASE=="Prolific Technology, Inc."
+* ACTION=="remove", SUBSYSTEM=="input", ID_MODEL_ID=="161f", ID_VENDOR_ID=="0c76", MAJOR=="13", MINOR=="88"
+/home/schelcc/bin/ws_dock.sh &
+* ACTION=="add", SUBSYSTEM=="sound", ID_MODEL_ID=="30b0", ID_VENDOR_ID=="17ef"
+/home/schelcc/bin/ws_dock.sh &
+* ACTION=="remove", SUBSYSTEM=="sound", ID_MODEL_ID=="30b0", ID_VENDOR_ID=="17ef"
 /home/schelcc/bin/ws_dock.sh &
