--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,7 +3,6 @@ set $mod Mod1
 font pango:monospace 8 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # Launch polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
@@ -17,8 +16,11 @@ exec "/home/schelcc/.config/i3/startup.sh"
 # Use pactl to adjust volume in PulseAudio.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
+bindsym Shift+XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% && $refresh_i3status
+bindsym Shift+XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioPause exec "playerctl play-pause"
 
 # Adjust brightness
 bindsym XF86MonBrightnessUp exec increase_brightness
@@ -97,9 +99,6 @@ bindsym $mod+Shift+space floating toggle
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
-# focus the parent container
-bindsym $mod+a focus parent
-
 # focus the child container
 #bindsym $mod+d focus child
 
@@ -116,22 +115,23 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# Monitors
-set $dleft "DP-3"
-set $dright "eDP-1"
+# Monitors | Note - Since I don't use a multi monitor setup unless I'm presenting, this is
+# 	     purpose built for that
+set $dprimary "eDP-1"
+set $dsecondary "HDMI-1" 
 
-# Set workspace outputs
-workspace $ws1 output $dleft
-workspace $ws2 output $dleft
-workspace $ws3 output $dleft
-workspace $ws4 output $dleft
-workspace $ws5 output $dleft
-workspace $ws6 output $dleft
-workspace $ws7 output $dright
-workspace $ws8 output $dright
-workspace $ws9 output $dright
-workspace $ws10 output $dright
-
+# Set workspace outputs # TODO
+#workspace $ws1 output $dprimary
+#workspace $ws2 output $dprimary
+#workspace $ws3 output $dprimary
+#workspace $ws4 output $dprimary
+#workspace $ws5 output $dsecondary # These will be primary undocked, secondary docked
+#workspace $ws6 output $dsecondary # These will be primary undocked, secondary docked
+#workspace $ws7 output $dsecondary # These will be primary undocked, secondary docked
+#workspace $ws8 output $dsecondary # These will be primary undocked, secondary docked
+#workspace $ws9 output $dprimary
+#workspace $ws10 output $dprimary
+#
 # switch to workspace
 bindsym $mod+1 workspace number $ws1 
 bindsym $mod+2 workspace number $ws2 
@@ -158,6 +158,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # Alternate between currently active and previously active workspaces
 bindsym $mod+Tab workspace back_and_forth
+#bindsym $mod+Tab exec "rofi -show window"
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -188,11 +189,16 @@ bindsym $mod+Shift+minus move scratchpad
 # Show the first scratchpad window
 bindsym $mod+minus scratchpad show
 
+# Scratchpad specifics
+bindsym $mod+m [instance="scratch_term"] scratchpad show
+bindsym $mod+a [title="^org_agenda_scratchpad"] scratchpad show
+bindsym $mod+c [class="^Gnome-calculator"] scratchpad show
+
 # gaps
-gaps inner 3
+gaps inner 4
 
 # Account for polybar width - TODO : Fix in polybar and remove here
-gaps bottom 30
+gaps bottom 35
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -202,10 +208,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -219,6 +225,12 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
+mode  "Passthrough Mode - Press Alt+F12 to exit" {
+      bindsym $mod+F12 mode "default"; exec "polybar-msg action passthrough next"
+}
+bindsym $mod+F12 mode "Passthrough Mode - Press Alt+F12 to exit"; exec "polybar-msg action passthrough next"
+
+
 # Default xpad notes to floating
 for_window [class="^xpad"] floating toggle
 
@@ -230,8 +242,13 @@ for_window [class="Spotify"] move to workspace $ws10
 # Default gnome-calculator to floating and throw on scratchpad
 for_window [class="^Gnome-calculator"] floating toggle move to scratchpad
 
+for_window [title="scratch_term"] floating toggle
+for_window [title="scratch_term"] resize set 800 500
+for_window [title="scratch_term"] move to scratchpad
+for_window [title="org_agenda_scratchpad"] move to scratchpad
+
 # Default any Tk instance to floating (temporary)
-for_window [class="^Tk"] floating toggle
+#for_window [class="^Tk"] floating toggle
 
 # Make the quick note terminal float
 for_window [title="Note jot"] floating toggle
@@ -245,7 +262,7 @@ bindsym $mod+r mode "resize"
 
 #REPLACETAG#
 # class                 border    backgr.   text      indicator
-client.focused          #282828       #282828       #d79921       #d79921
+client.focused          #282828       #fbf1c7       #d79921       #d79921
 client.focused_inactive #1d2021   #1d2021   #d5c4a1   #1d2021
 client.unfocused        #1d2021   #1d2021   #d5c4a1   #1d2021
 client.urgent           #d79921           #d79921           #282828   #d79921
