--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -41,7 +41,7 @@ override-redirect = true
 inherit = global-bar
 
 modules-left = xworkspaces 
-modules-right =  wireless battery-script pulseaudio weather date passthrough tray 
+modules-right =  wired-tailscale wired-usb wired-dock wireless battery-script pulseaudio weather date passthrough tray 
 ;modules-center = music
 
 ; Bar specific date module format
@@ -118,6 +118,18 @@ content = " "
 content-background = ${util-colors.background}
 content-foreground = ${util-colors.background}
 
+[module/wired-tailscale]
+type = internal/network
+
+interval = 2.5
+
+interface = tailscale0
+
+format-connected = <label-connected>
+label-connected = 󰖂
+;;  %upspeed%
+format-connected-underline = ${util-colors.accent}
+format-connected-padding = 1px
 
 [module/wireless]
 type = internal/network
@@ -127,7 +139,8 @@ interval = 2.5
 interface = wlp0s20f3
 
 format-connected = <label-connected> 
-label-connected = 󰖩 %essid% %downspeed:9%
+label-connected = 󰖩 %essid% (%local_ip%) %downspeed:9%
+;;  %upspeed%
 format-connected-underline = ${util-colors.accent}
 format-connected-padding = 1px
 
@@ -144,15 +157,16 @@ animation-packetloss-0 = 󱚵
 animation-packetloss-1 = 󰖩
 animation-packetloss-framerate = 500
 
-[module/wired]
+[module/wired-usb]
 type = internal/network
 
 interval = 2.5
 
-interface = enx00051b59ec6c
+;; Not sure why the hell I have different interfaces
+interface = enxa0cec8b719fe
 
 format-connected = <label-connected> 
-label-connected = 󰱓 %local_ip% %downspeed:9%
+label-connected = 󰱓 (%local_ip%) %downspeed:9%
 format-connected-underline = ${util-colors.accent}
 format-connected-padding = 1px
 
@@ -169,6 +183,31 @@ animation-packetloss-0 = 󰛴
 animation-packetloss-1 = 󰱦
 animation-packetloss-framerate = 500
 
+[module/wired-dock]
+type = internal/network
+
+interval = 2.5
+
+;; Not sure why the hell I have different interfaces
+interface = enx00e04c682b8d
+
+format-connected = <label-connected> 
+label-connected = 󰱓 (%local_ip%) %downspeed:9%
+format-connected-underline = ${util-colors.accent}
+format-connected-padding = 1px
+
+format-disconnected = <label-disconnected>
+label-disconnected = 󰅛
+format-disconnected-underline = ${util-colors.alert}
+format-disconnected-padding = 1px
+
+format-packetloss = <animation-packetloss> <label-connected>
+format-packetloss-underline = ${util-colors.accent}
+format-packetloss-padding = 1px
+
+animation-packetloss-0 = 󰛴
+animation-packetloss-1 = 󰱦
+animation-packetloss-framerate = 500
 
 
 [module/xworkspaces]
@@ -364,7 +403,7 @@ click-left = exec $HOME/.config/polybar/scripts/music_ctl.sh player next 1
 type = custom/script
 
 ; Seconds
-interval = 60
+interval = 120
 
 ; Display script stdout
 label = %output%
