--- a/.config/uudev.conf
+++ b/.config/uudev.conf
@@ -1,8 +1,8 @@
 *!?
 export DISPLAY=:0
-* ACTION=="add", SUBSYSTEM=="usb", ID_MODEL_ID=="161f", ID_VENDOR_ID=="0c76"
+* ACTION=="add", SUBSYSTEM=="usb", ID_MODEL_ID=="1212", ID_VENDOR_ID=="14cd"
 /home/schelcc/bin/ws_dock.sh &
-* ACTION=="remove", SUBSYSTEM=="input", ID_MODEL_ID=="161f", ID_VENDOR_ID=="0c76", MAJOR=="13", MINOR=="88"
+* ACTION=="remove", SUBSYSTEM=="usb", ID_MODEL_ID=="1212", ID_VENDOR_ID=="14cd"
 /home/schelcc/bin/ws_dock.sh &
 * ACTION=="add", SUBSYSTEM=="sound", ID_MODEL_ID=="30b0", ID_VENDOR_ID=="17ef"
 /home/schelcc/bin/ws_dock.sh &
