--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,6 +16,8 @@ exec "/home/schelcc/.config/i3/startup.sh"
 # Use pactl to adjust volume in PulseAudio.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
+bindsym XF86AudioNext exec "playerctl next"
+bindsym XF86AudioPrev exec "playerctl previous"
 bindsym Shift+XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% && $refresh_i3status
 bindsym Shift+XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
@@ -164,7 +166,7 @@ bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+Shift+c reload
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r exec "i3-msg restart && compositor-startup.sh"
+bindsym $mod+Shift+r exec "i3-msg restart && compositor-startup.sh && polybar-msg cmd quit"
 
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
@@ -193,6 +195,7 @@ bindsym $mod+minus scratchpad show
 bindsym $mod+m [instance="scratch_term"] scratchpad show
 bindsym $mod+a [title="^org_agenda_scratchpad"] scratchpad show
 bindsym $mod+c [class="^Gnome-calculator"] scratchpad show
+bindsym $mod+Shift+a [class="^Pavucontrol"] scratchpad show
 
 # gaps
 gaps inner 4
@@ -246,6 +249,7 @@ for_window [title="scratch_term"] floating toggle
 for_window [title="scratch_term"] resize set 800 500
 for_window [title="scratch_term"] move to scratchpad
 for_window [title="org_agenda_scratchpad"] move to scratchpad
+for_window [title="pavucontrol"] move to scratchpad
 
 # Default any Tk instance to floating (temporary)
 #for_window [class="^Tk"] floating toggle
