--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -41,7 +41,7 @@ override-redirect = true
 inherit = global-bar
 
 modules-left = xworkspaces 
-modules-right =  wired-tailscale wired-usb wired-dock wireless battery-script pulseaudio weather date passthrough tray 
+modules-right =  wired-tailscale wired-usb wired-dock wireless battery-script pulseaudio weather date passthrough kbd-toggle tray 
 ;modules-center = music
 
 ; Bar specific date module format
@@ -104,6 +104,30 @@ hook-0 = echo ""
 hook-1 = echo ""
 
 initial = 1
+
+[module/kbd-toggle]
+type = custom/ipc
+
+label = %output%
+
+;; Enabled
+format-0-underline = ${util-colors.accent}
+format-0-padding = 1
+format-0 = <label>
+
+;; Disabled
+format-1-underline = ${util-colors.alert}
+format-1-padding = 1
+format-1 = <label>
+
+;; Enable it
+hook-0 = xinput reattach 20 3; echo "󰥻"
+;; Disable it
+hook-1 = xinput float 20; echo "󰹋"
+
+initial = 1
+
+click-left = "#kbd-toggle.next"
 
 [module/tray]
 type = internal/tray
